feat: Setup GraalVM native plugin

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -32,3 +32,14 @@ hibernate {
 	}
 }
 
+ graalvmNative {
+     binaries {
+         main {
+             javaLauncher = javaToolchains.launcherFor {
+                 languageVersion = JavaLanguageVersion.of(17)
+                 vendor = JvmVendorSpec.matching("GraalVM Community")
+             }
+         }
+     }
+	 toolchainDetection = true
+ }
